added a test endpoint
